# maxima-nbconvert

./: LICENSE  README.md  pyproject.toml
src/maxima_nbconvert/: __init__.py  exporters.py  preprocessors.py
src/maxima_nbconvert/templates/maxima/: index.html.j2
src/maxima_nbconvert/templates/maxima_markdown/: index.md.j2
